--- a/ios/Podfile
+++ b/ios/Podfile
@@ -37,11 +37,11 @@ target 'Iporter' do
   pod 'react-native-google-maps', path: rn_maps_path  # Remove this line if you don't want to support GoogleMaps on iOS
   pod 'Google-Maps-iOS-Utils' # Remove this line if you don't want to support GoogleMaps on iOS
   pod 'RNVectorIcons', :path => '../node_modules/react-native-vector-icons'
-    pod 'GooglePlaces'
-    pod 'GoogleMaps'
-    pod 'GooglePlacePicker'
+  pod 'GooglePlaces'
+  pod 'GoogleMaps'
+  pod 'GooglePlacePicker'
 
-    pod 'RNVectorIcons', :path => '../node_modules/react-native-vector-icons'
+  pod 'react-native-spinkit', :path => '../node_modules/react-native-spinkit'
 
 end
 
